--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -2,6 +2,9 @@
     "maifest version": 3,
     "name": "MailWeave",
     "version": "1.0.0",
+    "icons": {
+        "32": "icons/icon1.png"
+    },
     "permissions": [
         "activeTab",
         "storage"
